# slide-ui

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  validate_code.yml
examples/: simple.rs  test.md  test.org
src/: cli.rs  config.rs  event.rs  lexer.rs  lib.rs  main.rs  parser.rs  render.rs
src/lexer/: md.rs  mod.rs  org.rs
src/parser/: mod.rs  presentation.rs  token.rs
